cleaned up the rest of the alt tags

--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -57,10 +57,10 @@
 
           <div class="carousel-track">
             <div class="carousel-slide">
-              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic1.webp" alt="Artist image 1">
+              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic1.webp" alt="">
             </div>
             <div class="carousel-slide">
-              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic2.webp" alt="Artist image 2">
+              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic2.webp" alt="">
             </div>
           </div>
 
@@ -77,10 +77,10 @@
             <p>Phone: (405) 473-3295</p>
           </div>
           <div class="artist-socials">
-            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook"></a> -->
-            <a href="https://www.instagram.com/powdr.band/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
-            <a href="https://www.youtube.com/channel/UCpk0vs8ECEMZzpmkhWxAqig"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
-            <!-- <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok"></a> -->
+            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a> -->
+            <a href="https://www.instagram.com/powdr.band/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
+            <a href="https://www.youtube.com/channel/UCpk0vs8ECEMZzpmkhWxAqig"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
+            <!-- <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a> -->
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@
       <div class="related-merch-content">
         
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <div class="store-section">
@@ -133,7 +133,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -151,7 +151,7 @@
         </div>
 
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section> -->
