--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -111,7 +111,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-012/mcr-012.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-012/mcr-012-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-012/mcr-012-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -129,7 +129,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-011/mcr-011-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-011/mcr-011-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -147,7 +147,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-009/mcr-009-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-009/mcr-009-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -165,7 +165,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/pndl-001/pndl-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -183,7 +183,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-010/mcr-010-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -201,7 +201,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-008/mcr-008-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-008/mcr-008-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -219,7 +219,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -237,7 +237,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-006/mcr-006-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -255,7 +255,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -273,7 +273,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -291,7 +291,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -309,7 +309,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -327,7 +327,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -345,7 +345,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -363,7 +363,7 @@
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/new-001/new-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
