--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -50,7 +50,7 @@
         <p class="artist-location">OKLAHOMA CITY, OK</p>
       </div>
       <div class="artist-image-container">
-        <img src="../../assets/images/roster/cryhard/roster-pic.webp" alt="Band Photo" class="artist-image">
+        <img src="../../assets/images/roster/cryhard/roster-pic.webp" alt="Artist Photo" class="artist-image">
       </div>
       <div class="artist-interactables">
         <div class="player-container">
@@ -60,10 +60,10 @@
           <div class="player-spacer"></div>
         </div>
         <div class="artist-social-icons">
-          <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook"></a>
-          <a href=""><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
-          <a href=""><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
-          <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
+          <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a>
+          <a href=""><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
+          <a href=""><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
+          <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a>
         </div>
       </div>
       <div class="description-section">
@@ -83,7 +83,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <!-- Store Section -->
@@ -95,7 +95,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -113,7 +113,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -131,7 +131,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -149,7 +149,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -168,7 +168,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section>
