--- a/store/index.html
+++ b/store/index.html
@@ -53,7 +53,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -71,7 +71,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-012/mcr-012.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-012/mcr-012-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-012/mcr-012-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -89,7 +89,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-011/mcr-011-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-011/mcr-011-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -107,7 +107,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-009/mcr-009-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-009/mcr-009-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -125,7 +125,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/pndl-001/pndl-001-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -143,7 +143,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-010/mcr-010-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -161,7 +161,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-008/mcr-008-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-008/mcr-008-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -179,7 +179,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -197,7 +197,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-006/mcr-006-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -215,7 +215,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -233,7 +233,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -251,7 +251,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -269,7 +269,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -287,7 +287,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -305,7 +305,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
