--- a/store/mcr-008/index.html
+++ b/store/mcr-008/index.html
@@ -438,7 +438,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <!-- Store Section -->
@@ -450,7 +450,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/pndl-001/pndl-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -468,7 +468,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -486,7 +486,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -504,7 +504,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -523,7 +523,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section>
