--- a/store/mcr-009/index.html
+++ b/store/mcr-009/index.html
@@ -433,7 +433,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <!-- Store Section -->
@@ -445,7 +445,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-011/mcr-011-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-011/mcr-011-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -463,7 +463,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-012/mcr-012.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-012/mcr-012-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-012/mcr-012-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -481,7 +481,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -499,7 +499,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -518,7 +518,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section>
