--- a/store/new-005/index.html
+++ b/store/new-005/index.html
@@ -432,7 +432,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <!-- Store Section -->
@@ -444,7 +444,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -462,7 +462,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -480,7 +480,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -498,7 +498,7 @@
               <div class="merch-block">
                 <div class="merch-block-image-container">
                   <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -517,7 +517,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section>
