--- a/roster/index.html
+++ b/roster/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="roster.css">
+    <link rel="stylesheet" href="roster.base.css">
+    <link rel="stylesheet" href="roster.md.css">
+    <link rel="stylesheet" href="roster.sm.css">
   </head>
 
   <body>
