--- a/store/index.html
+++ b/store/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="store.css">
+    <link rel="stylesheet" href="store.base.css">
+    <link rel="stylesheet" href="store.md.css">
+    <link rel="stylesheet" href="store.sm.css">
   </head>
 
   <body>
