--- a/roster/index.html
+++ b/roster/index.html
@@ -55,7 +55,7 @@
           <a href="acid-baptism/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\acid-baptism\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/acid-baptism/portrait.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -68,7 +68,7 @@
           <a href="cryhard/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\cryhard\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/cryhard/band.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -81,7 +81,7 @@
           <a href="donovan-funk/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\donovan-funk\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/donovan-funk/portrait-square.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -94,7 +94,7 @@
           <a href="feverest/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\feverest\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/feverest/band.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -107,7 +107,7 @@
           <a href="foam/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\foam\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/foam/band.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -120,7 +120,7 @@
           <a href="idiot-mile/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\idiot-mile\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/idiot-mile/live.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -133,7 +133,7 @@
           <a href="pageant-dad/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\pageant-dad\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/pageant-dad/portrait.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -146,7 +146,7 @@
           <a href="panhandle/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\panhandle\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/panhandle/portrait.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -159,7 +159,7 @@
           <a href="powdr/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\powdr\band-pic1.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/powdr/promo.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -172,7 +172,7 @@
           <a href="sweetest-pot/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\sweetest-pot\roster-pic.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/sweetest-pot/portrait.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
